Implement load_tga().

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,8 @@ LDFLAGS =
 
 DEPDIR = ./.deps
 
-OBJS = file_io.o color.o bitmapimg.o tgafile.o bmpfile.o error.o \
+OBJS = file_io.o color.o bitmapimg.o tgafile.o bmpfile.o \
+	pgmfile.o error.o \
 	tgatest.o
 
 DEPS = $(patsubst %.o,$(DEPDIR)/%.d,$(OBJS))
@@ -30,7 +31,7 @@ ifeq ($(findstring $(MAKECMDGOALS), clean distclean),)
   -include $(DEPS)
 endif
 
-tgatest: tgatest.o bitmapimg.o color.o file_io.o tgafile.o error.o
+tgatest: tgatest.o bitmapimg.o color.o file_io.o tgafile.o pgmfile.o error.o
 	@echo 'CC' $^
 	@echo '    =>' $@
 	@$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
