Implement load_png().

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,18 +1,18 @@
 #!/usr/bin/make -f
 
-CFLAGS = -std=gnu99 -Wall -Og -g -ggdb
-LDFLAGS = 
+CFLAGS = -std=gnu99 -Wall -Og -g -ggdb `pkg-config --cflags libpng`
+LDFLAGS = `pkg-config --libs libpng`
 
 DEPDIR = ./.deps
 
 OBJS = file_io.o color.o bitmapimg.o tgafile.o bmpfile.o \
-	pgmfile.o error.o \
-	tgatest.o
+	pgmfile.o pngfile.o error.o \
+	tgatest.o pngtest.o
 
 DEPS = $(patsubst %.o,$(DEPDIR)/%.d,$(OBJS))
 SRCS = $(patsubst %.o,%.c,$(OBJS))
 
-BINARIES = tgatest
+BINARIES = tgatest pngtest
 
 .PHONY: all depend clean distclean
 
@@ -32,6 +32,11 @@ ifeq ($(findstring $(MAKECMDGOALS), clean distclean),)
 endif
 
 tgatest: tgatest.o bitmapimg.o color.o file_io.o tgafile.o pgmfile.o error.o
+	@echo 'CC' $^
+	@echo '    =>' $@
+	@$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+
+pngtest: pngtest.o bitmapimg.o color.o file_io.o tgafile.o pngfile.o error.o
 	@echo 'CC' $^
 	@echo '    =>' $@
 	@$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
