--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,23 @@ src/pngtest
 src/tmp/
 *~
 
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+compile
+config.h
+config.log
+config.status
+configure
+depcomp
+install-sh
+missing
+src/.deps/
+src/Makefile
+src/Makefile.in
+stamp-h1
+
 # Prerequisites
 *.d
 
