--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 
 project(Nadzuna
   VERSION 0.1
@@ -17,6 +17,13 @@ if (JPEG_FOUND)
 endif(JPEG_FOUND)
 
 configure_file(config.h.in config.h)
+
+add_library(nadzuna_compiler_flags INTERFACE)
+target_compile_features(nadzuna_compiler_flags INTERFACE c_std_99)
+target_compile_options(nadzuna_compiler_flags INTERFACE
+  $<$<C_COMPILER_ID:MSVC>:/W4>
+  $<$<C_COMPILER_ID:GNU,Clang,AppleClang>:-Wall>
+)
 
 add_subdirectory(src)
 
